Fix - styling: Foundation sets `border-box` for the table cells which can cause the columns to be misaligned when scrolling. CSS is uses to set the table cells to be a content-box.

--- a/css/dataTables.foundation.scss
+++ b/css/dataTables.foundation.scss
@@ -5,6 +5,13 @@ table.dataTable {
 	max-width: none !important;
 	width: 100%;
 
+	td,
+	th {
+		-webkit-box-sizing: content-box;
+		-moz-box-sizing: content-box;
+		box-sizing: content-box;
+	}
+
 	// Style options for the table. Foundation provides its own, but it is also
 	// useful to have a few more for DataTables
 	&.nowrap {
